beacon with history

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
         <link rel="stylesheet" href="css/override.css" type="text/css"/>
         <link rel="stylesheet" href="css/hero.css" type="text/css"/>
         <link rel="stylesheet" href="css/masonry-docs.css" type="text/css"/>
+        		<link rel="stylesheet" type="text/css" href="css/default.css" />
+		<link rel="stylesheet" type="text/css" href="css/component.css" />
+
 
     </head>
     <body class="oj-hybrid">
@@ -88,8 +91,6 @@
         </div>
     </div>
 
-
-
     <div id="jqDialogWrapper">
         <div id="dialog-message" data-bind="attr: { title: titleText }" style="display:none">
             <p style="margin:20px 7px 20px 0;">
@@ -100,7 +101,6 @@
     </div>
     <script type="text/javascript" src="js/libs/require/require.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-
 </body>
 
 </html>
