--- a/hybrid/www/index.html
+++ b/hybrid/www/index.html
@@ -36,6 +36,9 @@
         <link rel="stylesheet" href="css/override.css" type="text/css"/>
         <link rel="stylesheet" href="css/hero.css" type="text/css"/>
         <link rel="stylesheet" href="css/masonry-docs.css" type="text/css"/>
+        		<link rel="stylesheet" type="text/css" href="css/default.css"/>
+		<link rel="stylesheet" type="text/css" href="css/component.css"/>
+
 
     </head>
     <body class="oj-hybrid">
@@ -82,8 +85,6 @@
         </div>
     </div>
 
-
-
     <div id="jqDialogWrapper">
         <div id="dialog-message" data-bind="attr: { title: titleText }" style="display:none">
             <p style="margin:20px 7px 20px 0;">
@@ -94,7 +95,6 @@
     </div>
     <script type="text/javascript" src="js/libs/require/require.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-
 <script src="cordova.js"></script>
     </body>
 
